# SDIS

./: CMakeLists.txt  main.cpp
headers/: ErrorCodes.hpp  MD5.hpp  ParallelizableProcess.h  SHA512.h  TCPserver.hpp  Thread.hpp  Utils.hpp
headers/Network/: SDISServer.hpp  TCPserver.hpp
headers/ParallelProcesses/: HMACParallelProcess.hpp  ParallelizableProcess.h  PrimesParallelProcess.hpp  SHA512ParallelProcess.hpp
src/: MD5.cpp  ParallelizableProcess.cpp  SHA512.cpp  TCPserver.cpp  Thread.cpp  Utils.cpp
src/Network/: SDISServer.cpp  TCPserver.cpp
src/ParallelProcesses/: HMACParallelProcess.cpp  ParallelizableProcess.cpp  PrimesParallelProcess.cpp  SHA512ParallelProcess.cpp
